Java8 Compatibility Issue Fixed